# hpie

./: CHANGELOG.md  Makefile  README.md  W.pi  W.txt  hpie.cabal  nW.txt  test.txt
app/: Main.hs
example/: ex_mid.pi  pair.pi  plus_sym.pi  tls.pi
src/Hpie/: AlphaEq.hs  CheckTy.hs  Env.hs  Norm.hs  Parser.hs  TopLevel.hs  Types.hs
test/: Parser.hs  Test.hs
