cabal-version:      2.4
name:               hpie
version:            0.1.0.0
author:             kamome
maintainer:         2038975825@qq.com

extra-source-files: CHANGELOG.md

common all
  build-depends:       base ^>=4.17.2.0
                       , mtl ^>=2.2.2
  ghc-options:         -Wall -fno-warn-incomplete-patterns
  default-language:    Haskell2010

common for-test
  import:              all            
  hs-source-dirs:      test
  build-depends:       hpie
                       , tasty ^>= 1.4
                       , tasty-hunit ^>= 0.10
library
  import:              all
  hs-source-dirs:      src
  exposed-modules:     Hpie.Types
                       Hpie.AlphaEq
                       Hpie.Norm
                       Hpie.CheckTy
                       Hpie.Parser
                       Hpie.TopLevel
                       Hpie.Env

executable hpie
  import:           all
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    hpie

test-suite parser-tests
  import:              for-test
  type:                exitcode-stdio-1.0
  main-is:             Parser.hs
